Remove sensitive information and demo credentials for public release

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,21 +1,25 @@
 # Database Configuration
+# Do NOT use default credentials - set secure values
 DB_HOST=localhost
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=password
+DB_USER=db_user
+DB_PASSWORD=secure_password_here
 DB_NAME=kudos_system
 
 # Server Configuration
 PORT=3000
-NODE_ENV=development
+NODE_ENV=production
 
 # JWT Configuration
-JWT_SECRET=your_secret_key_here
+# Generate a strong secret: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET=your_very_long_and_secure_secret_key_here
 JWT_EXPIRY=24h
 
-# Redis Configuration
+# Redis Configuration (Optional)
 REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_PASSWORD=
 
 # CORS Configuration
-CORS_ORIGIN=http://localhost:3000
+# Set to your frontend URL in production
+CORS_ORIGIN=https://yourdomain.com
