--- a/backend/package.json
+++ b/backend/package.json
@@ -10,28 +10,34 @@
     "test": "jest",
     "migrate": "ts-node src/database/migrations.ts"
   },
-  "keywords": ["kudos", "employee", "recognition"],
+  "keywords": [
+    "kudos",
+    "employee",
+    "recognition"
+  ],
   "author": "Datacom",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
     "bcryptjs": "^2.4.3",
-    "mysql2": "^3.4.0",
-    "dotenv": "^16.0.3",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "express-validator": "^7.0.0",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.4.0",
     "redis": "^4.6.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.0.0",
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/jest": "^29.5.0",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.9.1",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.0.0",
     "jest": "^29.5.0",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.0"
   }
 }
