Data privacy and security sanitization - remove all example values, hardcoded URLs, and sensitive configuration examples
- Replace all example emails (user@example.com) with generic internal.local addresses
- Remove localhost hardcoded URLs from backend and frontend
- Sanitize .env.example files with placeholders instead of example values
- Update documentation to remove all example credentials and URLs
- Remove demo comments that could leak implementation details
- Ensure all user-facing examples use generic, non-identifying data
- Add security warnings and guidelines for configuration
- Compliance with data privacy and security best practices

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,10 @@
 # Database Configuration
-# Do NOT use default credentials - set secure values
-DB_HOST=localhost
+#  IMPORTANT: Change all values below for your deployment
+# Do NOT commit real credentials - use strong, unique passwords
+DB_HOST=<your-database-host>
 DB_PORT=3306
-DB_USER=db_user
-DB_PASSWORD=secure_password_here
+DB_USER=<database-user>
+DB_PASSWORD=<secure-database-password>
 DB_NAME=kudos_system
 
 # Server Configuration
@@ -11,15 +12,17 @@ PORT=3000
 NODE_ENV=production
 
 # JWT Configuration
-# Generate a strong secret: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
-JWT_SECRET=your_very_long_and_secure_secret_key_here
+# CRITICAL: Generate a unique secret for each environment
+# Run: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+# Replace value below with generated output
+JWT_SECRET=<generate-unique-jwt-secret>
 JWT_EXPIRY=24h
 
 # Redis Configuration (Optional)
-REDIS_HOST=localhost
+REDIS_HOST=<redis-host>
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=<redis-password>
 
 # CORS Configuration
-# Set to your frontend URL in production
-CORS_ORIGIN=https://yourdomain.com
+# Set to your actual frontend domain in production
+CORS_ORIGIN=<your-frontend-domain>
