--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,3 @@
 # Backend API Configuration
-# Update this to your backend URL in production
-REACT_APP_API_URL=http://localhost:3000/api
+# Update this to your actual backend URL
+REACT_APP_API_URL=<your-backend-api-url>
